cryptroot hook: Copy 'ecb' kmod when the host CPU lacks AES-NI support.
On such systems XTS needs ECB, cf. https://gitlab.com/cryptsetup/cryptsetup/issues/319
and https://marc.info/?l=linux-crypto-vger&m=148783562211457&w=4 .

This is a work around for #883595 on kernels 4.10 and later.

Closes: #901884

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ cryptsetup (2:2.3.2-1) UNRELEASED; urgency=medium
 
   * New upstream release.
   * debian/control: Set 'Rules-Requires-Root: no'.
+  * d/initramfs/hooks/cryptroot: Unconditionally copy 'ecb' kernel module
+    when the host CPU lacks AES-NI support.  On such systems XTS needs ECB.
+    This is a work around for #883595 on kernels 4.10 and later.
+    (Closes: #901884)
 
  -- Guilhem Moulin <guilhem@debian.org>  Sat, 02 May 2020 19:28:21 +0200
 
