--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cryptsetup (2:2.3.3-2) UNRELEASED; urgency=medium
+
+  [ Helmut Grohne ]
+  * d/control: Annotate Build-Depends with <!nocheck>. (Closes: #964092)
+
+ -- Guilhem Moulin <guilhem@debian.org>  Wed, 01 Jul 2020 18:56:28 +0200
+
 cryptsetup (2:2.3.3-1) unstable; urgency=medium
 
   [ Guilhem Moulin ]
