--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-cryptsetup (2:2.3.3-2) UNRELEASED; urgency=medium
+cryptsetup (2:2.3.3-2) unstable; urgency=medium
 
   [ Helmut Grohne ]
   * d/control: Annotate Build-Depends with <!nocheck>. (Closes: #964092)
@@ -11,7 +11,7 @@ cryptsetup (2:2.3.3-2) UNRELEASED; urgency=medium
   * Add 'bitlk' flag in crypttab(5) to force detection of Windows BitLocker
     volumes. (Closes: #967853)
 
- -- Guilhem Moulin <guilhem@debian.org>  Wed, 01 Jul 2020 18:56:28 +0200
+ -- Guilhem Moulin <guilhem@debian.org>  Wed, 12 Aug 2020 00:22:59 +0200
 
 cryptsetup (2:2.3.3-1) unstable; urgency=medium
 
