--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cryptsetup (2:2.3.3-3+exp2) UNRELEASED; urgency=medium
+
+  * d/control: typofix (Closes: #968455)
+
+ -- Guilhem Moulin <guilhem@debian.org>  Wed, 26 Aug 2020 23:44:48 +0200
+
 cryptsetup (2:2.3.3-3+exp1) experimental; urgency=medium
 
   * Add new binary package 'crypsetup-suspend', which implements support
