--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 cryptsetup (2:2.3.3-3+exp2) UNRELEASED; urgency=medium
 
-  * d/control: typofix (Closes: #968455)
+  * d/control: Typofix in cryptsetup-suspend's long description.
+    (Closes: #968455)
+  * d/control: Make cryptsetup-suspend explicitly depend on kbd as we use
+    openvt(1) in the systemd-suspend.service override. (Closes: #969226)
 
  -- Guilhem Moulin <guilhem@debian.org>  Wed, 26 Aug 2020 23:44:48 +0200
 
