--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,13 @@ cryptsetup (2:2.3.3-3+exp2) UNRELEASED; urgency=medium
   * d/control: Make cryptsetup-suspend explicitly depend on kbd as we use
     openvt(1) in the systemd-suspend.service override. (Closes: #969226)
   * d/*: Run wrap-and-sort(1).
-  * d/scripts/suspend/cryptsetup-suspend-wrapper: Parse /proc/meminfo in a
-    single pass using shell builtins rather than calling awk(1).
+  * d/scripts/suspend/cryptsetup-suspend-wrapper:
+    + Parse /proc/meminfo in a single pass using shell builtins rather than
+      calling awk(1).
+    + Use "/boot/initrd.img-$(uname -r)" as path to the initrd instead of
+      deriving it from the kernel command line.  BOOT_IMAGE's value is
+      relative to the boot's loader viewpoint, which might differ from that of
+      the main system.
 
  -- Guilhem Moulin <guilhem@debian.org>  Wed, 26 Aug 2020 23:44:48 +0200
 
