--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+cryptsetup (2:2.3.4-2) UNRELEASED; urgency=medium
+
+  * d/control: Remove Build-Depends: dh-exec.  In compatibility level 13
+    Debhelper supports variable expansion, which was why we used dh-exec in
+    the first place.
+
+ -- Guilhem Moulin <guilhem@debian.org>  Tue, 29 Dec 2020 01:13:15 +0100
+
 cryptsetup (2:2.3.4-1) unstable; urgency=high
 
   * New upstream bugfix release, including fix for CVE-2020-14382:
