--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,8 @@ cryptsetup (2:2.3.4-2) UNRELEASED; urgency=medium
     Debhelper supports variable expansion, which was why we used dh-exec in
     the first place.
   * libcryptsetup-dev: Install libcryptsetup.so to /lib/$DEB_HOST_MULTIARCH
-    not /usr/lib/$DEB_HOST_MULTIARCH .
+    not /usr/lib/$DEB_HOST_MULTIARCH , and override subsequent lintian warning
+    per #843932.
 
  -- Guilhem Moulin <guilhem@debian.org>  Tue, 29 Dec 2020 01:13:15 +0100
 
