--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ cryptsetup (2:2.3.4-2) UNRELEASED; urgency=medium
   * libcryptsetup-dev: Install libcryptsetup.so to /lib/$DEB_HOST_MULTIARCH
     not /usr/lib/$DEB_HOST_MULTIARCH , and override subsequent lintian warning
     per #843932.
+  * d/cryptsetup.lintian-overrides: Rename "init.d-script-does-not-implement-
+    optional-option $FOO status" tags to "init.d-script-does-not-implement-
+    status-option $FOO".
 
  -- Guilhem Moulin <guilhem@debian.org>  Tue, 29 Dec 2020 01:13:15 +0100
 
