--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ cryptsetup (2:2.3.4-2) UNRELEASED; urgency=medium
   * d/cryptsetup.lintian-overrides: Rename "init.d-script-does-not-implement-
     optional-option $FOO status" tags to "init.d-script-does-not-implement-
     status-option $FOO".
+  * Bump Standards-Version to 4.5.1 (no changes necessary).
 
  -- Guilhem Moulin <guilhem@debian.org>  Tue, 29 Dec 2020 01:13:15 +0100
 
