--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,8 @@ cryptsetup (2:2.3.4-2) UNRELEASED; urgency=medium
   * Bump Standards-Version to 4.5.1 (no changes necessary).
   * d/cryptdisks-functions: Rename left-over loop_cryptdevs() to
     foreach_cryptdev().  Regression from 2:2.3.0-1.  (Closes: #974591)
+  * Initramfs boot script: Drop `lvm vgchange`'s --ignoreskippedcluster flag
+    which is now a no-op.
 
   [ Felix C. Stegerman ]
   * Fix typo in README.gnupg-sc
