--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ cryptsetup (2:2.3.4-2) UNRELEASED; urgency=medium
   * Initramfs boot script: Drop `lvm vgchange`'s --ignoreskippedcluster flag
     which is now a no-op.
   * Make d/cryptsetup-initramfs.preinst mangling idempotent.
+  * Rename Debian branch to debian/latest for DEP-14 compliance.
 
   [ Guilherme G. Piccoli ]
   * Initramfs boot script: Fix a deadlock when cryptroot would wait at
