--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ cryptsetup (2:2.3.4-2) UNRELEASED; urgency=medium
     which is now a no-op.
   * Make d/cryptsetup-initramfs.preinst mangling idempotent.
   * Rename Debian branch to debian/latest for DEP-14 compliance.
+  * Rename d/gitlab-ci.yml to d/salsa-ci.yml.
 
   [ Guilherme G. Piccoli ]
   * Initramfs boot script: Fix a deadlock when cryptroot would wait at
