--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,9 @@ cryptsetup (2:2.3.4-2) UNRELEASED; urgency=medium
   * Rename Debian branch to debian/latest for DEP-14 compliance.
   * Rename d/gitlab-ci.yml to d/salsa-ci.yml.
   * Consolidate d/gbp.conf.
+  * cryptsetup-initramfs now requires initramfs-tools 0.137 or later and no
+    longer copies libgcc_s.so.1 to the initrd since recent initramfs-tools
+    take care of it.
 
   [ Guilherme G. Piccoli ]
   * Initramfs boot script: Fix a deadlock when cryptroot would wait at
