--- a/debian/changelog
+++ b/debian/changelog
@@ -17,7 +17,8 @@ cryptsetup (2:2.3.4-2) UNRELEASED; urgency=medium
   * Initramfs boot script: Drop `lvm vgchange`'s --ignoreskippedcluster flag
     which is now a no-op.
   * Make d/cryptsetup-initramfs.preinst mangling idempotent.
-  * Rename Debian branch to debian/latest for DEP-14 compliance.
+  * Rename Debian resp. upstream branch to debian/latest resp. upstream/latest
+    for DEP-14 compliance.
   * Rename d/gitlab-ci.yml to d/salsa-ci.yml.
   * Consolidate d/gbp.conf.
   * cryptsetup-initramfs now requires initramfs-tools 0.137 or later and no
