--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-cryptsetup (2:2.3.4-2) UNRELEASED; urgency=medium
+cryptsetup (2:2.3.4-2) unstable; urgency=medium
 
   [ Guilhem Moulin ]
   * d/control: Remove Build-Depends: dh-exec.  In compatibility level 13
@@ -35,7 +35,7 @@ cryptsetup (2:2.3.4-2) UNRELEASED; urgency=medium
   [ Felix C. Stegerman ]
   * Fix typo in README.gnupg-sc
 
- -- Guilhem Moulin <guilhem@debian.org>  Tue, 29 Dec 2020 01:13:15 +0100
+ -- Guilhem Moulin <guilhem@debian.org>  Thu, 14 Jan 2021 19:16:40 +0100
 
 cryptsetup (2:2.3.4-1) unstable; urgency=high
 
