--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ cryptsetup (2:2.3.4-3) UNRELEASED; urgency=medium
   * d/watch: Monitor upstream tags rather than tarball.
   * d/gbp.conf: Set 'upstream-vcs-tag' to add upstream tag as additional
     parent.
+  * Rename d/upstream-signing-key.asc to d/upstream/signing-key.asc as uscan
+    is now able to verify git tags.
 
  -- Guilhem Moulin <guilhem@debian.org>  Thu, 11 Mar 2021 22:37:57 +0100
 
