--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 cryptsetup (2:2.3.5-1) UNRELEASED; urgency=medium
 
   * New upstream bugfix release.
-  * d/watch: Monitor upstream tags rather than tarball.
+  * d/watch: Monitor upstream tags rather than tarballs.
   * d/gbp.conf: Set 'upstream-vcs-tag' to add upstream tag as additional
     parent.
   * Simplify d/README.source in accordance with the above.
