--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,9 @@ cryptsetup (2:2.3.5-1) unstable; urgency=medium
     is now able to verify git tags.
   * encrypted-boot.md: Clarify how to solve double password prompt for the
     device holding /boot.
+  * d/copyright: Update copyright year.
 
- -- Guilhem Moulin <guilhem@debian.org>  Thu, 11 Mar 2021 23:33:13 +0100
+ -- Guilhem Moulin <guilhem@debian.org>  Fri, 02 Apr 2021 23:43:41 +0200
 
 cryptsetup (2:2.3.4-2) unstable; urgency=medium
 
